# knn

./: CMakeLists.txt  console_view.cpp  console_view.h  console_view_test.cpp  entity.h  iris.cpp  iris.h  kaggle_compete.cpp  knn.cpp  knn.h  main.cpp  main_new.cpp  mnist.cpp  mnist.h  mnist_mlpack.cpp  mnist_new.cpp  mnist_new.h  point.h  statistics.cpp  view.cpp
